--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nextjs-template-jsass",
+	"name": "dogguncatsu",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -10,7 +10,11 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@next-auth/mongodb-adapter": "^1.0.3",
+		"mongodb": "^4.5.0",
 		"next": "12.1.4",
+		"next-auth": "^4.3.1",
+		"next-themes": "^0.1.1",
 		"react": "18.0.0",
 		"react-dom": "18.0.0"
 	},
